# tree-sitter-python

./: Cargo.toml  README.md  compile_commands.json
bindings/rust/: README.md  build.rs  c_alloc.rs  lib.rs  scanner.rs
bindings/rust/wasm-sysroot/impl/: string.c
rust-tester/: Cargo.toml
rust-tester/src/: main.rs  tests.rs  util.rs
