[package]
name = "tree-sitter-python-wasm-compatible"
description = "Python grammar for the tree-sitter parsing library in pure rust"
version = "0.20.2"
authors = [
    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
    "Douglas Creager <dcreager@dcreager.net>",
    "Liam Rosenfeld <me@liamrosenfeld.com>"
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "python"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-python"
edition = "2021"

include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-c2rust = { git = "https://github.com/shadaj/tree-sitter-c2rust/" }
bytemuck = {version = "1.13", features = ["derive"]}

[build-dependencies]
cc = "1.0"
