[package]
name = "tree-sitter-python"
description = "Python grammar for tree-sitter"
version = "0.20.4"
authors = [
	"Max Brunsfeld <maxbrunsfeld@gmail.com>",
	"Douglas Creager <dcreager@dcreager.net>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "python"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-python"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = { version = "~0.20.10", optional = true }
tree-sitter-c2rust = { version = "~0.20.10", optional = true }

[build-dependencies]
cc = "~1.0"

[features]
default = ["native"]
native = ["dep:tree-sitter"]
wasm = ["dep:tree-sitter-c2rust"]
